# ha-chmi-weather

./: .gitignore  AGENTS.md  CHANGELOG.md  DISCLAIMER.md  NOTICE.md  README.md  SECURITY.md  SKILL.md  TODO.md  hacs.json  pyproject.toml  ruff.toml
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: validate.yaml
custom_components/: __init__.py
custom_components/chmi_weather/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  models.py  sensor.py  strings.json  weather.py
custom_components/chmi_weather/translations/: cs.json  en.json  sk.json
docs/: architecture.md  chmi-opendata.md  development.md  roadmap.md  statistics.md  status.md
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_sensor.py  test_translations.py  test_weather.py
tests/fixtures/: README.md  chmi_dobrichovice_current.json  chmi_dobrichovice_current_1h.json  chmi_dobrichovice_recent_daily.json  chmi_meta1_current.json  chmi_meta2_current.json  chmi_meta3_current.json  chmi_meta4_current.json  chmi_synop_station_current.json  chmi_synop_station_current_1h.json
tests_ha/: conftest.py  test_integration_setup.py
