[project]
name = "ha-chmi-weather"
version = "0.1.0"
description = "Home Assistant custom integration for CHMI OpenData weather stations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.12.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
